feat: Add `last_started_job` and `last_finished_job` to `GET /monitors` response
